# mediagoblin

./: .dockerignore  .gitignore  .gitmodules  .guix-authorizations  AUTHORS  Dockerfile  Dockerfile-debian-11-sqlite  Dockerfile-debian-12-sqlite  Dockerfile-fedora-33-sqlite  Dockerfile.nginx.in  MANIFEST.in  Makefile.in  README-Guix.md  README.md  autogen.sh  ben-sturmfels.key  bootstrap.sh  configure.ac  docker-compose.build.yml  docker-compose.build.yml.in  docker-compose.ecs.yml  docker-compose.ecs.yml.in  docker-compose.env  docker-compose.lazyserver.yml  docker-compose.lazyserver.yml.in  docker-compose.local.yml  docker-compose.nginx.yml.in  docker-compose.standalone.yml.in  docker-compose.yml  docker-compose.yml.in  entrypoint.sh  glib-networking-fake-DEBIAN-control  guix-env.scm  guix.scm  mediagoblin.example.ini  nginx.conf  nginx.conf.template  package-lock.json  package.json  pyproject.toml  (+3 more)
.builds/: debian-11.yml  debian-12-sqlite.yml  debian-12.yml  debian-13.yml  fedora-39.yml  fedora-42.yml  fedora.yml  guix.yml  ubuntu-20.04.yml  ubuntu-22.04.yml  ubuntu-23.10.yml  ubuntu-24.04.yml
.guix/modules/: mediagoblin-package.scm  service.scm
.guix/modules/mediagoblin/: packages.scm  services.scm
devtools/: compile_translations.sh
docs/source/: conf.py  index.rst
docs/source/devel/: codebase.rst  migrations.rst  release.rst  writing-documentation.rst
docs/source/pluginwriter/: api.rst  foreward.rst  tests.rst
docs/source/siteadmin/: about.rst  deploying.rst  docker.rst  foreword.rst  help.rst  media-types.rst  plugins.rst  relnotes.rst  third-party-resources.rst  upgrading.rst
extlib/: README
m4/: ax_python_devel.m4  ax_python_gi.m4
mediagoblin/: _version.py  errormiddleware.py
mediagoblin/auth/: tools.py  views.py
mediagoblin/db/: base.py  migration_tools.py  mixin.py  models.py  open.py
mediagoblin/db/migrations/versions/: 101510e3a713_removes_graveyard_items_from_.py  228916769bd2_ensure_report_object_id_is_nullable.py  3145accb8fe3_remove_tombstone_comment_wrappers.py  4066b9f8b84a_use_comment_link_ids_notifications.py  52bf0ccbedc1_initial_revision.py  8429e33fdf7_remove_the_graveyard_objects_from_.py
mediagoblin/gmg_commands/: dbupdate.py
mediagoblin/init/celery/: __init__.py  from_celery.py
mediagoblin/media_types/ascii/: models.py  processing.py
mediagoblin/media_types/ascii/migrations/: 72bd70f7eefd_ascii_media_type_initial_migration.py
mediagoblin/media_types/audio/: models.py  transcoders.py
mediagoblin/media_types/audio/migrations/: e9212d3a12d3_adding_audio_media_type_initial_.py
mediagoblin/media_types/blog/: models.py
mediagoblin/media_types/blog/migrations/: 562bc42a8fff_blog_media_type_initial_migration.py
mediagoblin/media_types/image/: config_spec.ini  models.py  processing.py
mediagoblin/media_types/image/migrations/: a98c1a320e88_image_media_type_initial.py
mediagoblin/media_types/pdf/: models.py  processing.py
mediagoblin/media_types/pdf/migrations/: faa209f143b5_pdf_media_type_initial_migration.py
mediagoblin/media_types/stl/: models.py
mediagoblin/media_types/stl/migrations/: 16134ed134ad_stl_media_type_initial_migration.py
mediagoblin/media_types/video/: models.py  transcoders.py
mediagoblin/media_types/video/migrations/: 38feb829c545_video_media_type_initial_migration.py
mediagoblin/moderation/: forms.py  views.py
mediagoblin/notifications/: __init__.py
mediagoblin/plugins/archivalook/: models.py
mediagoblin/plugins/basic_auth/: forms.py  tools.py
mediagoblin/plugins/openid/: models.py
mediagoblin/plugins/openid/migrations/: 071abb33d1da_openid_plugin_initial_migration.py
mediagoblin/plugins/piwigo/: tools.py  views.py
mediagoblin/processing/: __init__.py  task.py
mediagoblin/static/css/: audio.css  base.css  video.css
mediagoblin/static/js/: audio.js
mediagoblin/submit/: forms.py  task.py
mediagoblin/templates/mediagoblin/media_displays/: audio.html  video.html
mediagoblin/templates/mediagoblin/user_pages/: blog_media.html  media.html
mediagoblin/templates/mediagoblin/utils/: collection_gallery.html  media_grid.html  object_gallery.html
mediagoblin/tests/: appconfig_context_modified.ini  appconfig_static_plugin.ini  conftest.py  test_api.py  test_audio.py  test_collections.py  test_edit.py  test_feed.py  test_globals.py  test_legacy_api.py  test_mgoblin_app.ini  test_mgoblin_app_audio.ini  test_mgoblin_app_audio_video.ini  test_mgoblin_app_pdf.ini  test_mgoblin_app_video.ini  test_misc.py  test_piwigo.py  test_privileges.py  test_submission.py  test_subtitles.py  test_util.py  test_video.py  test_workbench.py  tools.py
mediagoblin/tests/auth_configs/: authentication_disabled_appconfig.ini  ldap_appconfig.ini  openid_appconfig.ini
mediagoblin/themes/airy/assets/css/: airy.css
mediagoblin/tools/: crypto.py  exif.py  metadata.py  request.py  response.py  session.py  template.py  text.py  timesince.py
mediagoblin/user_pages/: forms.py  lib.py
