# GNU MediaGoblin -- federated, autonomous media hosting
# Copyright (C) 2011, 2012 MediaGoblin contributors.  See AUTHORS.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = mediagoblin
version = attr: mediagoblin._version.__version__
author = MediaGoblin contributors
author_email = mediagoblin-devel@gnu.org
license = AGPLv3
description = MediaGoblin is a web application for publishing all kinds of media
long_description = file: README.md
url = https://mediagoblin.org/
project_urls =
    Bug Tracker = https://todo.sr.ht/~mediagoblin/mediagoblin
classifiers=[
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[aliases]
test=pytest

[options]
packages = find:
# We now use f-strings internally and allow Python requirements that do too.
python_requires = >=3.7
zip_safe = False
include_package_data = True
install_requires =
    alembic>=0.7.5
    Babel>=1.3
    celery<=5.1.0  # Error in 5.2.0 (AttributeError: 'NoneType' object has no attribute 'push')
    ConfigObj
    email-validator
    ExifRead>=2.0.0
    feedgenerator
    itsdangerous
    jinja2
    jsonschema
    Markdown
    oauthlib
    PasteScript
    bcrypt
    PyLD>=2.0.0  # 2.0.0 included significant breaking changes
    python-dateutil
    pytz
    requests>=2.6.0
    soundfile
    sqlalchemy>=1.4.0,<2.0.0
    unidecode
    waitress
    werkzeug>=0.7,<2.2.0  # 2.2.0 breaks legacy API and submission tests.
    wtforms>2.1,<3.0  # Still has a couple of issues to resolve with 3.0.0
    wtforms-sqlalchemy  # Provides the ext.sqlalchemy module dropped in wtforms 3.0.0

    # These packages can be problematic to build, so we recommend that users
    # install them from their OS package manager.
    lxml
    Pillow>=2.7.0

[options.extras_require]
dev =
    build
    wheel
test =
    pytest>=2.3.1
    pytest-xdist
    pytest-forked
    WebTest>=2.0.18
raw_image =
    py3exiv2
audio =
    numpy
video =
    pygobject
ascii =
    chardet
doc =
    snowballstemmer
    sphinx
    sphinxcontrib.applehelp
    sphinxcontrib.devhelp
    sphinxcontrib.htmlhelp
    sphinxcontrib.jsmath
    sphinxcontrib.qthelp
    sphinxcontrib.websupport
ldap =
    python-ldap
openid =
    python3-openid>=2.2.5

[options.entry_points]
console_scripts =
    gmg = mediagoblin.gmg_commands:main_cli
paste.app_factory =
    app = mediagoblin.app:paste_app_factory
paste.server_runner =
    paste_server_selector = mediagoblin.app:paste_server_selector
paste.filter_app_factory =
    errors = mediagoblin.errormiddleware:mgoblin_error_middleware
babel.extractors =
    jinja2 = jinja2.ext:babel_extract

[tool:pytest]
minversion = 2.3
addopts = -rs --forked
testpaths =
        mediagoblin/tests
