# GNU MediaGoblin -- federated, autonomous media hosting
# Copyright (C) 2011, 2012 MediaGoblin contributors.  See AUTHORS.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = mediagoblin
version = attr: mediagoblin._version.__version__
author = MediaGoblin contributors
author_email = mediagoblin-devel@gnu.org
license = AGPLv3
description = MediaGoblin is a web application for publishing all kinds of media
long_description = file: README.md
url = https://mediagoblin.org/
project_urls =
    Bug Tracker = https://todo.sr.ht/~mediagoblin/mediagoblin
classifiers=
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
# We're using the "flat-layout" approach in this repository:
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#flat-layout
#
# The automatic discovery for flat-layout doesn't handle multiple top-level
# directories, so we either need to move to an "src-layout" or use custom
# discovery with a `packages` setting and an `[options.packages.find]`
# section. The `find_namespace:` avoids some setuptools warnings, but since
# we're including the whole "mediagoblin" subdirectory via MANIFEST.in, it could
# just be `find:` in practise.
#
# Switching to an src-layout would probably help avoid some of setuptools' quirks.
packages = find_namespace:
# Packaging application data with setuptools is a real minefield. You can either
# use `include_package_data = true` and a MANIFEST.in, or use the seemingly
# simpler `[options.package_data]` section. Until you discover that
# `[options.package_data]` only includes data *directly* alongside .py file
# (packages and namespace packages) but not any directories of just data
# (eg. translations). It's possible to list them out explicitly,
# eg. "i18n/de/*", but I'm sure as hell not maintaining that. So you eventually
# give up and just use MANIFEST.in. Also note that this relates specifically to
# data for use by the application, not external data like documentation. See
# `[options.data_files]` for that.
include_package_data = true
# We now use f-strings internally and allow Python requirements that do too.
python_requires = >=3.7
install_requires =
    alembic>=0.7.5
    Babel>=1.3
    celery
    ConfigObj
    email-validator
    ExifRead>=2.0.0
    feedgenerator
    itsdangerous
    jinja2>=3.0.3  # Avoid soft_unicode from earlier markupsafe
    jsonschema>=4.0.0  # 3.2.0 fails with "AttributeError: type object
                       # 'Draft4Validator' has no attribute 'FORMAT_CHECKER'"
    Markdown
    oauthlib
    PasteScript
    bcrypt
    bleach
    PyLD>=2.0.0  # 2.0.0 included significant breaking changes
    python-dateutil
    requests>=2.6.0
    soundfile
    sqlalchemy>=1.4  # Supports 2.0 as well as 1.4 in "future" mode
    unidecode
    waitress
    werkzeug>=0.7
    wtforms>2.1
    wtforms-sqlalchemy  # Provides ext.sqlalchemy dropped in wtforms 3.0.0

    # These packages can be problematic to build, so we recommend that users
    # install them from their OS package manager.
    Pillow>=2.7.0

[options.packages.find]
# This is the only top-level Python package path we include. This setting isn't
# actually required, since it's MANIFEST.in overrides it by including the whole
# `mediagoblin` subdirectory.
include =
        # `mediagoblin*` works here but not `mediagoblin`, `mediagoblin.*` or
        # `mediagoblin/*` (with MANIFEST.in disabled).
        mediagoblin*

[options.package_data]
# Don't bother trying this. See above regarding packaging application data.

[options.data_files]
# These are data files that aren't directly used by the application, such as
# example config and documentation.
etc/mediagoblin =
  mediagoblin.example.ini
  paste.ini
# Listing out the licenses explicitly because Debian 11 build fails with "licenses/*", saying:
# error: can't copy 'licenses/*': doesn't exist or not a regular file
share/mediagoblin/licenses =
  licenses/AGPLv3.txt
  licenses/CC0_1.0.txt
# This doesn't work because it seems to only like regular files, not
# subdirectories.
# share/doc/mediagoblin = docs/source/*

[options.extras_require]
dev =
    build
    wheel
test =
    pytest>=2.3.1
    pytest-xdist  # test speed
    pytest-forked  # test isolation
    WebTest>=2.0.18
raw_image =
    py3exiv2
audio =
    numpy
video =
    pygobject<3.51
# pygobject 3.51+ needs girepository-2.0, which is not available on
# bookworm:
# gir1.2-girepository-2.0 in the base image for video
# gir1.2-girepository-2.0-dev in the builder image
#
ascii =
    chardet
doc =
    snowballstemmer
    sphinx
    sphinxcontrib.applehelp
    sphinxcontrib.devhelp
    sphinxcontrib.htmlhelp
    sphinxcontrib.jsmath
    sphinxcontrib.qthelp
    sphinxcontrib.websupport
ldap =
    python-ldap
openid =
    python3-openid>=2.2.5

[options.entry_points]
console_scripts =
    gmg = mediagoblin.gmg_commands:main_cli
paste.app_factory =
    app = mediagoblin.app:paste_app_factory
paste.server_runner =
    paste_server_selector = mediagoblin.app:paste_server_selector
paste.filter_app_factory =
    errors = mediagoblin.errormiddleware:mgoblin_error_middleware
babel.extractors =
    jinja2 = jinja2.ext:babel_extract

[tool:pytest]
# Test suite will not pass without isolation provided by --forked. Needs
# investigation to prove this - Ben is concerned that --forked might just be
# covering up errors somehow.
#
# The --numprocesses=auto option uses multiple CPUs but not multiple cores but
# --numprocesses=logical is not supported on the Ubuntu 20.0 version of pytest.
#
# Run `pytest -o addopts=''` to override these default settings.
addopts = --forked --numprocesses=auto
testpaths =
        mediagoblin/tests
